...

class NewCardPaymentSectionController: NSObject, SectionController {
    
    static let subType = "card"
    
    enum Item: String {
        case accordionKey = "newCardAccordionKey"
        case consentToggle
        case cardInfo
        case checkoutButton
        // display this item only when session is AWXOneOffSession && has customerId
        case saveCardToggle
        case unionPayWarning
        
        // billing fields
        case cardholderName
        case billingFieldEmail
        case billingFieldPhone
...
        imageLoader: imageLoader,
        supportedBrands: []
    )
    
    private lazy var viewModelForConsentToggle = CardPaymentSectionHeaderViewModel(
        title: NSLocalizedString("Add new", bundle: .payment, comment: ""),
        actionTitle: NSLocalizedString("Keep using saved cards", bundle: .payment, comment: ""),
        buttonAction: { [weak self] in
            guard let self else { return }
            self.switchToConsentPaymentAction()
            
            AnalyticsLogger.log(
                action: .selectPayment,
...
