...
            NSLayoutConstraint.activate([
                activityIndicator.centerXAnchor.constraint(equalTo: centerXAnchor),
                activityIndicator.centerYAnchor.constraint(equalTo: centerYAnchor),
            ])
            
            activityIndicator.startAnimating()
            activityIndicator.accessibilityIdentifier = "loadingSpinnerView"
            return
        }
        bringSubviewToFront(indicator)
        indicator.startAnimating()
    }
    
...
