/* close button for UIAlertController
close button for alert
close button on navigation bar */
"Close" = "Close";

/* CVC / CVV placeholder */
"CVC / CVV" = "CVC / CVV";

/* No comment provided by engineer. */
"Enter CVC/CVV for\n%@" = "Enter CVC/CVV for\n%@";

/* string description when decimal number is zero */
"Free" = "Free";

/* Pay now - pay button */
"Pay now" = "Pay now";

/* total amount of payment session */
"Total %@" = "Total %@";

"Enter CVC/CVV" = "Enter CVC/CVV";
